Hashed password function

--- a/LoginTemp/website/templates/base.html
+++ b/LoginTemp/website/templates/base.html
@@ -39,7 +39,7 @@
 
             </div>
         </div>
-        <h1 class="text-white">WebScraper</h1>
+        <h1 class="text-white">Login Template</h1>
     </div>
 </nav>
 
